packages/framework/esm-styleguide/src/patient-banner/contact-details/patient-banner-contact-details.module.scss
@use '@carbon/colors';
@use '@carbon/styles/scss/spacing';
@use '@carbon/styles/scss/type';
@import '~@openmrs/esm-styleguide/src/vars';

.contactDetails {
  color: $text-02;
  width: 100%;
  border-top: 1px solid $ui-03;
}

.heading {
  @include type.type-style('heading-compact-01');
  color: $text-02;
}

.deceased {
  .contactDetails,
  .heading,
  .row,
  .row > .col {
    color: $ui-02;
    background-color: colors.$gray-80;
  }

  .menu {
    fill: colors.$blue-40;
  }

  &:focus,
  &:hover {
    background-color: colors.$gray-90;
  }
}

.row {
  @include type.type-style('body-compact-01');
  display: flex;

  &:first-child {
    border-bottom: 1px solid $ui-03;
  }
}

.row > .col {
  flex: 1;
  padding: 1rem 1rem;

  &:nth-of-type(2n + 1) {
    border-right: 1px solid $ui-03;
  }
}

.row li {
  margin: 0.5rem 0;
}

.relationship {
  display: flex;
  flex-flow: row nowrap;
}

.relationship div {
  flex: 1 1;
}

